# mx-packageinstaller

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  about.cpp  aptcache.cpp  aptcache.h  build.sh  cmd.cpp  final_optimization_summary.md  lockfile.cpp  lockfile.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mx-packageinstaller.desktop  mx-packageinstaller.pro  mx-packageinstaller_0.14.1mx141+2_i386.deb  mx-packageinstaller_0.14.1mx141+3_i386.deb  mx-packageinstaller_0.14.1mx141+4_i386.deb  mx-packageinstaller_0.14.2mx142+1_i386.deb  mx-packageinstaller_0.14.2mx142+2_i386.deb  mx-packageinstaller_0.14.2mx142+3_i386.deb  mx-packageinstaller_0.1mx140+1_i386.deb  mx-packageinstaller_0.1mx140+2_i386.deb  mx-packageinstaller_0.1mx141+2_i386.deb  mx-packageinstaller_14.2+1_i386.deb  mx-packageinstaller_14.3_i386.deb  mx-packageinstaller_14.4_i386.deb  mx-packageinstaller_15.1.1_i386.deb  mx-packageinstaller_15.1.2_i386.deb  mx-packageinstaller_15.10.1mx15.dsc  mx-packageinstaller_15.10.1mx15.tar.xz  mx-packageinstaller_15.10.1mx15_i386.deb  mx-packageinstaller_15.10.2mx15.dsc  mx-packageinstaller_15.10.2mx15.tar.xz  mx-packageinstaller_15.10.2mx15_i386.deb  (+316 more)
.obs/: workflows.yml
Testing/: CMakeLists.txt  test_cmd.cpp  test_flatpakfilterproxy.cpp  test_flatpakmodel.cpp  test_outputrender.cpp  test_packagelistparser.cpp  test_popularfilterproxy.cpp  test_popularmodel.cpp  test_sizeutils.cpp  test_snapfilterproxy.cpp  test_snapmodel.cpp  test_versionnumber.cpp
bm/: Children-Preschool.bm  Children-Primary.bm  Children-Scratch_Programming.bm  Children-Secondary.bm  Games-Simple_Card_Puzzle.bm  Games-Super_Tux_Games.bm
debian/: changelog  changelog.orig  control  install  postinst  rules
debs/: mx-packageinstaller_19.4.1.dsc  mx-packageinstaller_19.4.1.tar.xz  mx-packageinstaller_19.4.1_amd64.deb  mx-packageinstaller_19.4.1_i386.deb  mx-packageinstaller_19.4.2.dsc  mx-packageinstaller_19.4.2.tar.xz  mx-packageinstaller_19.4.2_amd64.deb  mx-packageinstaller_19.4.2_i386.deb  mx-packageinstaller_21.7.01.dsc  mx-packageinstaller_21.7.01.tar.xz  mx-packageinstaller_21.7.01_amd64.deb  mx-packageinstaller_21.7.01_i386.deb  mx-packageinstaller_21.7.dsc  mx-packageinstaller_21.7.tar.xz  mx-packageinstaller_21.7_amd64.deb  mx-packageinstaller_21.7_i386.deb  mx-packageinstaller_22.10.01.dsc  mx-packageinstaller_22.10.01.tar.xz  mx-packageinstaller_22.10.01_amd64.build  mx-packageinstaller_22.10.01_amd64.buildinfo  mx-packageinstaller_22.10.01_amd64.changes  mx-packageinstaller_22.10.01_amd64.deb  mx-packageinstaller_22.10.01_armhf.build  mx-packageinstaller_22.10.01_armhf.buildinfo  mx-packageinstaller_22.10.01_armhf.changes  mx-packageinstaller_22.10.01_armhf.deb  mx-packageinstaller_22.10.01_i386.build  mx-packageinstaller_22.10.01_i386.buildinfo  mx-packageinstaller_22.10.01_i386.changes  mx-packageinstaller_22.10.01_i386.deb  mx-packageinstaller_22.12.dsc  mx-packageinstaller_22.12.tar.xz  mx-packageinstaller_22.12_amd64.changes  mx-packageinstaller_22.12_amd64.deb  mx-packageinstaller_22.12_i386.changes  mx-packageinstaller_22.12_i386.deb  mx-packageinstaller_22.12_source.changes  mx-packageinstaller_22.4.1.dsc  mx-packageinstaller_22.4.1_amd64.changes  mx-packageinstaller_22.4.1_i386.changes  (+486 more)
help/: mx-package-installer.html
obj-x86_64-linux-gnu/: mx-packageinstaller_am.qm  mx-packageinstaller_ca.qm  mx-packageinstaller_cs.qm  mx-packageinstaller_da.qm  mx-packageinstaller_de.qm  mx-packageinstaller_el.qm  mx-packageinstaller_es.qm  mx-packageinstaller_es_ES.qm  mx-packageinstaller_fi.qm  mx-packageinstaller_fr.qm  mx-packageinstaller_fr_BE.qm  mx-packageinstaller_gl.qm  mx-packageinstaller_gl_ES.qm  mx-packageinstaller_he_IL.qm  mx-packageinstaller_hi.qm  mx-packageinstaller_hu.qm  mx-packageinstaller_it.qm  mx-packageinstaller_ja.qm  mx-packageinstaller_ka.qm  mx-packageinstaller_ko.qm  mx-packageinstaller_lt.qm  mx-packageinstaller_nb.qm  mx-packageinstaller_nl.qm  mx-packageinstaller_nl_BE.qm  mx-packageinstaller_pl.qm  mx-packageinstaller_pt.qm  mx-packageinstaller_pt_BR.qm  mx-packageinstaller_ro.qm  mx-packageinstaller_ru.qm  mx-packageinstaller_ru_RU.qm  mx-packageinstaller_sk.qm  mx-packageinstaller_sl.qm  mx-packageinstaller_sq.qm  mx-packageinstaller_sv.qm  mx-packageinstaller_th.qm  mx-packageinstaller_tr.qm  mx-packageinstaller_uk.qm  mx-packageinstaller_zh_CN.qm  mx-packageinstaller_zh_TW.qm
profiles/: 20250801_204806_baseline.txt  20250801_204825_baseline_fixed.txt  20250801_205026_regex_removal.txt  20250801_205338_parallel_io.txt  20250801_205747_memory_mapping.txt  20250801_210001_streaming_parser.txt  20250801_210244_version_caching.txt  20250801_210350_version_caching_retry.txt  20250801_210540_qstringview.txt  20250801_210759_container_prealloc.txt  performance_summary.csv
scripts/: mxpi-launcher  mxpi-lib  mxpi-maintenance  org.mxlinux.pkexec.mxpi-helper.policy  org.mxlinux.pkexec.mxpi-launcher.policy
src/: about.cpp  aptcache.cpp  aptcache.h  checkableheaderview.cpp  cmd.cpp  cmd.h  helper.cpp  lockfile.cpp  lockfile.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outputrender.h  packagelistparser.h  remotes.cpp  sizeutils.h  version.h  versionnumber.cpp  versionnumber.h
tests/: CMakeLists.txt  test_aptcache.cpp  test_versionnumber.cpp
translations/: get_translations  mx-packageinstaller_af.ts  mx-packageinstaller_am.ts  mx-packageinstaller_ar.ts  mx-packageinstaller_ast.ts  mx-packageinstaller_be.ts  mx-packageinstaller_bg.ts  mx-packageinstaller_bn.ts  mx-packageinstaller_bs.ts  mx-packageinstaller_bs_BA.ts  mx-packageinstaller_ca.ts  mx-packageinstaller_ceb.ts  mx-packageinstaller_co.ts  mx-packageinstaller_cs.ts  mx-packageinstaller_cy.ts  mx-packageinstaller_da.ts  mx-packageinstaller_de.ts  mx-packageinstaller_el.ts  mx-packageinstaller_en.ts  mx-packageinstaller_en_GB.ts  mx-packageinstaller_en_US.ts  mx-packageinstaller_eo.ts  mx-packageinstaller_es.ts  mx-packageinstaller_es_ES.ts  mx-packageinstaller_et.ts  mx-packageinstaller_eu.ts  mx-packageinstaller_fa.ts  mx-packageinstaller_fi.ts  (+101 more)
(+88 files in other folders)
